# withsecure-phase1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/actions/build-application/: action.yml
.github/workflows/: ci.yml  deploy.yml  lint.yml  test.yml
notebooks/: 00_allRoadslead2BrainStorming.ipynb  01_exploration.ipynb  02_analytics.ipynb  03_preprocessing.ipynb  04_baselinemodel_job_logit.ipynb
src/: __init__.py  runner.py
src/config/: .env  __init__.py  config.py
src/model/: __init__.py  model_service.py
src/model/pipeline/: collection.py  model.py  preparation.py
tests/: __init__.py  test_basic.py
